--- a/general.css
+++ b/general.css
@@ -1,4 +1,4 @@
-BODY {background: #0f0f30;
+BODY {background-image: url("fractals.jpg");
   margin: 0px;
   padding: 0px;
   
@@ -9,35 +9,10 @@ H1 {font-size: 24pt; font-family: arial}
 H2 {font-size: 18pt; font-family: arial}
 H3 {font-size: 14pt; font-family: arial}    
 
-#t {
-  
-}
-
-#tTop {
-  position: fixed;
-  width: 75%;
-  background-color: #00f0f0;
-  border-radius: 4px;
-  
-}
-
-#tBot {
+.header {
   position: absolute;
-  height: 100%;
-  margin-left: 30%;
-  background-color: #00f0f0;
-  border-radius: 4px;
-
-}
-
-#ren {
-  position: absolute;
-  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-  color: #00f0f0; 
-  margin-top: 500px;
-  margin-left:50%;
-  font-weight: 900;       
-  line-height: 0%;
-  border: 2px solid white;
-  min-width: 10000px;
+  height: 100px;
+  width: 100%;
+  background-color: lightgray;  
+  opacity: 0.7;
 }
