--- a/general.css
+++ b/general.css
@@ -23,5 +23,5 @@ H3 {font-size: 14pt; font-family: arial}
   z-index: 0;
   height: 100%;
   width: 100%;
-  border: 2px solid red;  
+  border: 2px solid gray;  
 }
